--- a/files/grayscale.css
+++ b/files/grayscale.css
@@ -156,7 +156,7 @@ a:focus {
     font-size: 30px;
   }
 }
-@-webkit-keyframes pulse {
+@webkit-keyframes pulse {
   0 {
     -webkit-transform: scale(1);
     transform: scale(1);
@@ -170,7 +170,7 @@ a:focus {
     transform: scale(1);
   }
 }
-@-moz-keyframes pulse {
+@moz-keyframes pulse {
   0 {
     -moz-transform: scale(1);
     transform: scale(1);
