--- a/files/grayscale.css
+++ b/files/grayscale.css
@@ -3,7 +3,7 @@ body {
   height: 100%;
   font-family: "Lora", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: white;
-  background-color: black;
+  background-color: rgb(19, 18, 18);
 }
 html {
   width: 100%;
@@ -17,7 +17,8 @@ h5,
 h6 {
   margin: 0 0 35px;
   text-transform: uppercase;
-  font-family: "pragmatica-web-condensed", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "pragmatica-web-condensed", "Helvetica Neue", Helvetica, Arial,
+    sans-serif;
   font-weight: 700;
   letter-spacing: 2px;
 }
@@ -113,7 +114,7 @@ a:focus {
   }
   .navbar-custom.top-nav-collapse {
     padding: 0;
-    background: black;
+    background: rgb(19, 18, 18);
   }
   .navbar-custom.top-nav-collapse .navbar-brand {
     display: inline;
@@ -156,34 +157,7 @@ a:focus {
     font-size: 30px;
   }
 }
-@webkit-keyframes pulse {
-  0 {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -webkit-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-  100% {
-    -webkit-transform: scale(1);
-    transform: scale(1);
-  }
-}
-@moz-keyframes pulse {
-  0 {
-    -moz-transform: scale(1);
-    transform: scale(1);
-  }
-  50% {
-    -moz-transform: scale(1.2);
-    transform: scale(1.2);
-  }
-  100% {
-    -moz-transform: scale(1);
-    transform: scale(1);
-  }
-}
+
 .content-section {
   padding-top: 100px;
   font-size: 20px;
@@ -191,17 +165,7 @@ a:focus {
 .content-section .row [class*="col-"] {
   padding-top: 10px;
 }
-.download-section {
-  width: 100%;
-  padding: 50px 0;
-  color: white;
-  background: url(../img/downloads-bg-mrako.jpg) no-repeat center center scroll;
-  background-color: black;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  -o-background-size: cover;
-}
+
 #map {
   width: 100%;
   height: 200px;
