--- a/files/grayscale.css
+++ b/files/grayscale.css
@@ -12,15 +12,15 @@ html {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 0 0 35px;
+  margin: 0 0 65px;
   text-transform: uppercase;
   font-family: pragmatica-web-condensed, "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: 800;
-  letter-spacing: 2px
+  letter-spacing: 4px
 }
 
 h2 {
-  font-size: 40px
+  font-size: 42px
 }
 
 p {
@@ -33,7 +33,7 @@ p {
   p {
     margin: 0 0 35px;
     font-size: 20px;
-    line-height: 1.6
+    line-height: 1.2;
   }
 }
 
@@ -152,7 +152,6 @@ a:focus, a:hover {
 .intro .intro-body {
   display: table-cell;
   vertical-align: middle;
-  padding-top: 100px
 }
 
 .intro .intro-body .brand-heading {
@@ -160,7 +159,7 @@ a:focus, a:hover {
 }
 
 .intro .intro-body .intro-text {
-  font-size: 15px
+  font-size: 15px;
 }
 
 @media (min-width:768px) {
