--- a/files/style.css
+++ b/files/style.css
@@ -1,57 +1,103 @@
-#projects {
-    width: 80%;
+.fade-out {
+    width: 100%;
+    height: 300px;
+    position: absolute;
+    bottom: 0;
+    background: linear-gradient(to bottom, rgba(44, 43, 43, 0), rgba(0,0,0,1.0));
 }
 
-.project-section{
+.row h1 {
+    margin: 0px 0px 20px;
+}
+
+.project-section {
     display: flex;
     box-sizing: border-box;
-    width: 100%;
+    width: 100%
 }
 
 .project {
-    margin: 0px 10px 10px;
+    margin: 0px 8px 5px;
+    height: 500px;
 }
 
 .project-content {
-    font-style: italic;
+    width: 100%;
+    height: 100%;
+    text-align: center;
 }
 
+.project-content h3 {
+    margin: 20px;
+}
 
 #project-image {
-    width: 80%;
-    height: 180px;
+    width: 100%;
+    height: 290px;
 }
 
 #project-image-phone {
-    width: 50%;
-    height: 180px;
+    width: 60%;
+    height: 290px;
 }
 
 #issue-image {
-    
-    height: 180px;
+    height: 290px;
 }
 
-@media(max-width: 800px){
-    .project-section{
+#projects {
+    width: 100%;
+    height: auto;
+    background: linear-gradient(rgba(19,18,18, 0.9), rgba(19,18,18, 0.9)), url(../Images/background.jpg) no-repeat center scroll;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    -o-background-size: cover;
+    overflow: hidden;
+}
+
+.project-info {
+    text-align: left;
+}
+
+
+.about-text {
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.about-text-content {
+    width: 50%;
+    text-align: left;
+    margin: 0;
+    padding: 0;
+}
+
+@media(max-width: 800px) {
+    .project-section {
         flex-direction: column;
     }
-
     .project {
         margin: 30px 15px 15px;
         width: 95%;
     }
-
+    #projects {
+        background: none;
+    }
     #project-image {
         width: 100%;
     }
-
     #issue-image {
         width: 100%;
     }
-
     #project-image-phone {
         width: 70%;
-        height: 200px;
+        height: 350px;
+    }
+
+    .fade-out {
+        visibility: hidden;
     }
 }
