--- a/files/grayscale.css
+++ b/files/grayscale.css
@@ -137,7 +137,7 @@ a:focus, a:hover {
 .intro {
   display: table;
   width: 100%;
-  height: auto;
+  height: 100%;
   padding: 100px 0;
   text-align: center;
   color: #fff;
