--- a/files/style.css
+++ b/files/style.css
@@ -34,16 +34,32 @@
 #project-image {
     width: 100%;
     height: 290px;
+    opacity: 0.9;
 }
 
 #project-image-phone {
     width: 60%;
     height: 290px;
+    opacity: 0.9;
 }
 
 #issue-image {
     height: 290px;
+    opacity: 0.9;
 }
+
+#project-image:hover {
+    opacity: 1;
+}
+
+#project-image-phone:hover {
+    opacity: 1;
+}
+
+#issue-image:hover{
+    opacity: 1;
+}
+
 
 #projects {
     width: 100%;
